# metocean-stats

./: .gitignore  .readthedocs.yml  LICENSE  README.md  environment.yml  pyproject.toml  setup.py  standard_automatic_report_stavern.py  test_table_current_for_given_Hs_coeff.csv  test_table_current_for_given_wind_coeff.csv  test_table_hs_for_given_wind_coeff.csv  test_table_sotrm_surge_for_given_Hs_coeff.csv  version.py
.github/workflows/: tests.yml
docs/: Hs_Tp_scatter.csv  TORSEHAUGEN_wave_induced_current_depth200.csv  conf.py  dir_Hs_Tp_joint_param.csv  example_NORA3_stats.py  hs_dir_min_mean_max.csv  hs_monthly_perc.csv  hs_montly_min_mean_max.csv  hs_tpl_tph_return_values.csv  index.rst  monthly_Hs_Tp_joint_param.csv  monthly_Hs_Tp_joint_return_values.csv  requirements.txt  table_dir_Hmax_return_values.csv  tp_for_rv_hs.csv
docs/files/: HS_monthly_extremes_Weibull.csv  Hs_Tp_scatter.csv  Hs_table_monthly_non_exceedance.csv  JONSWAP_wave_induced_current_depth200.csv  RVE_wind_profile.csv  T2m_monthly_extremes_neg.csv  T2m_monthly_extremes_pos.csv  T2m_table_monthly_non_exceedance.csv  TORSEHAUGEN_wave_induced_current_depth200.csv  Tp_sorted_by_Hs.csv  Uc_for_rv_hs.csv  Uc_for_rv_wind.csv  binned_error_metric.csv  dir_Hs_Tp_joint_param.csv  directional_Hs_Tp_joint_return_values.csv  directional_extremes_weibull.csv  directional_extremes_weibull_current_0m.csv  hs_for_rv_wind.csv  hs_tpl_tph_return_values.csv  monthly_Hs_Tp_joint_param.csv  monthly_Hs_Tp_joint_return_values.csv  monthly_extremes_weibull_current_0m.csv  nb_hour_below_thr.csv  table_Hmax_crest_return_values.csv  table_binned_error_metric.csv  table_cca_profiles.csv  table_dir_Hmax_return_values.csv  table_directional_non_exceedance.csv  table_error_metric.csv  table_error_metric_multiple.csv  table_extreme_total_water_level.csv  table_linear_regression.csv  table_perc_current_for_Hs.csv  table_perc_current_for_Hs_coeff.csv  table_perc_current_for_wind.csv  table_perc_current_for_wind_coeff.csv  table_perc_hs_for_wind.csv  table_perc_hs_for_wind_coeff.csv  table_perc_surge_for_Hs.csv  table_perc_surge_for_Hs_coeff.csv  (+7 more)
examples/: binned_error_metric.csv  binned_error_metric_two_var.csv  example_AI_report.py  example_ERA5_stats.py  example_NORA.py  example_NORA3_stats.py  example_NORA_full.py  example_NORA_mini.py  example_NORA_wind_waves.py  example_automatic_report.py  example_joint_model.py  example_maps.py  example_ml.py  example_ml_spec.py  example_report.py  example_report_AI.py  example_standaraized_report_Stavanger.py  example_verification.py
metocean-stats/stats/: dir_stats.py  extreme_stats.py  general_stats.py
metocean_stats/: version.py
metocean_stats/CMA/: __init__.py  contours.py  distributions.py  extremes.py  intervals.py  joint_models.py  jointmodel.py  plotting.py  predefined.py
metocean_stats/maps/: __init__.py  maps.py
metocean_stats/plots/: __init__.py  climate.py  contours.py  dir.py  extreme.py  general.py  jointmodel.py  spectra.py  verification.py
metocean_stats/stats/: __init__.py  aux_funcs.py  dir.py  dir_stats.py  doc_funcs.py  environmental_contours.py  extreme.py  extreme_stats.py  general.py  general_stats.py  map_funcs.py  ml.py  ml_stats.py  profile.py  profile_stats.py  spec_funcs.py  (+1 more)
tests/: test_climate.py  test_general_stats.py  test_joint.py  test_maps.py  test_ml.py  test_plots.py  test_stats.py  test_tables.py  test_verification.py
(+11 files in other folders)
