[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metocean-stats"
description = "metocean-stats - Tool for generation of metocean statistics"
dynamic = ["version"]
authors = [
  { name = "Konstantinos Christakos MET Norway & NTNU" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy>=1.17",
  "xarray",
  "matplotlib>=3.1",
  "pandas",
  "scipy",
  "windrose",
  "seaborn>=0.12.2",
  "pyextremes",
  "cartopy",
  "python-docx",
  "netcdf4",
  "pydap",
  "virocon>=2.4",
]

[project.urls]
Homepage = "https://github.com/MET-OM/metocean-stats"
Repository = "https://github.com/MET-OM/metocean-stats"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = []
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "metocean_stats.version.__version__" }




